testdata/baselines/reference/submodule/compiler/moduleImport.errors.txt
moduleImport.ts(2,17): error TS2694: Namespace 'X' has no exported member 'Y'.
moduleImport.ts(9,17): error TS2694: Namespace 'A' has no exported member 'B'.


==== moduleImport.ts (2 errors) ====
    module A.B.C {
    	import XYZ = X.Y.Z;
    	               ~
!!! error TS2694: Namespace 'X' has no exported member 'Y'.
    	export function ping(x: number) {
    		if (x>0) XYZ.pong (x-1);
    	}
    }
    
    module X {
    	import ABC = A.B.C;
    	               ~
!!! error TS2694: Namespace 'A' has no exported member 'B'.
    	export function pong(x: number) {
    		if (x > 0) ABC.ping(x-1);
    	}
    }